# python-personal-cloud-ftp

./: .gitignore  README.md  mypy.ini  pyproject.toml
client/: client.py
client/GUI/: LoginGui.py
docs/: readme_es.md
server/: adminpanel.py  adminpanel.ui  app.py  createaccount.py  gui.ui  users.db  utils.py
sockets/: client.py
sockets/basic sockets/: client.py  server.py
sockets/file trasnfer/: reciever.py  sender.py
sockets/multithreaded File Transfer/: client.py  server.py
src/Client/: client.py  fileBrowser.py  form_ui.py  login.py  main.py  main.ui  qftp.py  utils.py
src/Client/prepared/: client.py
src/Client/ui/: form.ui  main.py
src/Server/: __main__.py  adminpanel.py  adminpanel.ui  app.py  createaccount.py  environment.py  ftpserver.py  main.py  users.db  utils.py
src/Server/ip/: __init__.py  ip.py
